// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyName renders with a custom value 1`] = `
<label id="companyNameField"
       class="o-forms-field"
       data-validate="required"
       for="companyName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Company name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="companyName"
           name="company"
           placeholder="Enter your company name"
           autocomplete="organization"
           data-trackable="company-name"
           aria-required="true"
           required
           value="foobar"
    >
    <span class="o-forms-input__error">
      Please enter your company name.
    </span>
  </span>
</label>
`;

exports[`CompanyName renders with an error 1`] = `
<label id="companyNameField"
       class="o-forms-field"
       data-validate="required"
       for="companyName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Company name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="companyName"
           name="company"
           placeholder="Enter your company name"
           autocomplete="organization"
           data-trackable="company-name"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your company name.
    </span>
  </span>
</label>
`;

exports[`CompanyName renders with default props 1`] = `
<label id="companyNameField"
       class="o-forms-field"
       data-validate="required"
       for="companyName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Company name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="companyName"
           name="company"
           placeholder="Enter your company name"
           autocomplete="organization"
           data-trackable="company-name"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your company name.
    </span>
  </span>
</label>
`;

exports[`CompanyName renders with disabled input 1`] = `
<label id="companyNameField"
       class="o-forms-field"
       data-validate="required"
       for="companyName"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Company name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="companyName"
           name="company"
           placeholder="Enter your company name"
           autocomplete="organization"
           data-trackable="company-name"
           aria-required="true"
           required
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please enter your company name.
    </span>
  </span>
</label>
`;
